# mirapipe

./: .gitignore  pyproject.toml
mirapipe-client/: __main__.py  gui.py  types.py  utils.py
mirapipe-client/gui/: __init__.py  types.py  utils.py
mirapipe-client/ssl/: __init__.py
mirapipe-server/: __init__.py  __main__.py
