[tool.poetry]
name = "mirapipe"
version = "0.1.0"
description = "简单的SSL双端文本交互GUI小程序"
authors = ["AzideCupric <rukuy@qq.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/AzideCupric/mirapipe"
repository = "https://github.com/AzideCupric/mirapipe"
documentation = "https://github.com/AzideCupric/mirapipe/README.md"
keywords = []
classifiers = []
include = ["mirapipe-clent", "mirapipe-server"]

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
ttkbootstrap = "^1.10.1"

[tool.poetry.group.lint.dependencies]
ruff = "^0.1.0"
isort = "^5.10.1"
black = "^23.1.0"
nonemoji = "^0.1.2"
pre-commit = "^3.1.0"

[tool.black]
line-length = 120
target-version = ["py310", "py311"]
include = '\.pyi?$'
extend-exclude = '''
'''

[tool.isort]
profile = "black"
line_length = 120
length_sort = true
skip_gitignore = true
force_sort_within_sections = true
extra_standard_library = ["typing_extensions"]

[tool.ruff]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["C901"]

line-length = 120
target-version = "py312"

[tool.ruff.flake8-pytest-style]
fixture-parentheses = false
mark-parentheses = false

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
